chore: fix horizontal scroll

--- a/src/webview/views/ChatView/ChatView.module.css
+++ b/src/webview/views/ChatView/ChatView.module.css
@@ -24,6 +24,7 @@
 .message-list {
     flex: 1;
     overflow-y: scroll;
+    overflow-x: hidden;
     padding: 0 12px;
     display: flex;
     flex-direction: column;
